--- a/resources/style/from-960.css
+++ b/resources/style/from-960.css
@@ -1,2 +1,56 @@
 @charset "utf-8";
 /* styly se aplikují na viewporty od šířky 960px */
+
+/* hlavní menu start */
+
+.mainMenu{
+    display: block;
+}
+.menuTrigger{
+    position: fixed;
+    z-index: 20;
+    display: block;
+    width: 3rem;
+    height: 3rem;
+    background-color: #333333;
+    cursor: pointer;
+    background-image: url("../images/iconClose.svg");
+    background-size: 2rem;
+    background-repeat: no-repeat;
+    background-position: center center;
+    border-radius: 100%;
+    left: 1rem;
+    top: 1rem;
+}
+.menuTrigger.menuHidden{
+    background-image: url("../images/iconMenu.svg");
+}
+.menuItems{
+    position: fixed;
+    z-index: 10;
+    height: 100vh;
+    background: #ffffff;
+    transition: 0.5s left ease;
+    width: 20vw;
+    left: 0;
+    padding: 8rem 1em 0 0;
+    box-sizing: border-box;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.25);
+}
+.menuItems .chapterLink{
+    display: block;
+    width: 100%;
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    box-sizing: border-box;
+    border-bottom-right-radius: 10rem;
+    border-top-right-radius: 10rem;
+}
+.menuItems .chapterLink:hover{
+    background: #eeeeee;
+}
+.menuItems.menuHidden{
+    left: -20vw;
+}
+
+/* hlavní menu konec */
