--- a/resources/style/from-1280.css
+++ b/resources/style/from-1280.css
@@ -1,2 +1,8 @@
 @charset "utf-8";
 /* styly se aplikují na viewporty od šířky 1280px */
+
+html {
+    scroll-behavior: smooth;
+    font-size: 20px;
+}
+
