--- a/resources/style/from-840.css
+++ b/resources/style/from-840.css
@@ -1,2 +1,7 @@
 @charset "utf-8";
 /* styly se aplikují na viewporty od šířky 840px */
+
+html {
+    scroll-behavior: smooth;
+    font-size: 16px;
+}
