Přidává iframy s datastudiem

--- a/resources/style/base.css
+++ b/resources/style/base.css
@@ -37,7 +37,7 @@ a{
 
 .chapterScreen{
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -60,6 +60,15 @@ a{
 }
 
 /* slidy prezentace konec */
+
+/* slidy grafy start */
+
+.chapterScreen{
+    width: 100vw;
+    min-height: 100vh;
+}
+
+/* slidy grafy konec*/
 
 /* hlavní menu start */
 
